# climate_temporal_networks

./: .gitignore  Launcher.sh  import_daily_aggregate_loop.py  import_data_era_api.py  pyproject.toml  read_data.py  requirements.txt
Analysis/: ANOVAtest.ipynb  Create_IAAFT_surogates.py  FUZZY COSTRUCTION.ipynb  LCC_analysis.py  Plot.py  Plot_2.py  Plot_Tipping_Heatmaps.ipynb  Plot_weigthed.py  README.md  analisi_anomalie.ipynb  analisi_causality.py  analisi_correlazioni.py  analisi_dataset_precipitzioni.ipynb  analisi_prior.py  analysis.py  analysis_betweenness.py  correlation3.py  create_network.py  dask_for_cloud.ipynb  dask_for_cloud.py  dataset_IAAFT_surrogates.ipynb  filtraggio_Lorenzo.py  iaaft.py  main_correlations.py  make_surr_dataset.ipynb  makedataset_Lorenzo.py  network_parallelized.py  networkparralelized2.py  new_plot.py  plot.py  read_data.py  sanity_check.py  test.ipynb  test_correlation_time.py  threshold_comparison.ipynb  weigthed_analysis.py
Analysis/Functions/: correlations_climate.py  correlations_functions.py  other_functions.py
Analysis/lib/: bayes.py  causality.py  correlation.py  (+3 more)
data/: Create_IAAFT_surogates.py  Launcher.sh  Preprocess_dataset.py  README.md  Rename_nc_files.sh  Set_record_dimension_ncfiles.sh  import_anomalies.py  import_daily_aggregate_loop.py  nohup.out  preprocessing_models.py  temp_tipping_mean_std_values_1970_2022.csv  temp_tipping_mean_std_values_2022_2100.csv
src/: Rename_nc_files.sh  Set_record_dimension_ncfiles.sh  extract_anomalies.py  filtraggio_Lorenzo.py
tests/: test_anomalies.ipynb  test_correlation.ipynb
(+17 files in other folders)
